--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./workspace:/opt/workspace
       - ./cache:/root/.cache/
-    working_dir: /opt/whisper
+    working_dir: /opt/workspace
     entrypoint: uvicorn api:app --host 0.0.0.0 --port 7890 --reload
     restart: always
 
